--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@ html{
 
     /* background-color: #fff; */
     background-color: rgb(24, 26, 27);
-    color: white;
     height: 100%;
     padding: 0px;
     margin: 0px;
@@ -14,6 +13,10 @@ html{
   max-width: 100%;
   overflow-x: hidden;
 } */
+
+html, body, p, h1, h2, h3, h4, h5{
+  color: rgb(226, 226, 226);
+}
 
 
 
@@ -40,8 +43,8 @@ html{
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  /* background-color: #28052f; */
-  background-color: rgb(40, 5, 47);
+  background-color: #28052f;
+  /* background-color: rgb(40, 5, 47); */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
 }
@@ -65,6 +68,7 @@ html{
 
 .name{
     background-color: rgb(149, 6, 6);
+    /* background-color: rgb(211, 16, 16); */
     text-align: center;
     padding: 0px;
     margin: 0px;
@@ -75,7 +79,8 @@ html{
 }
 
 .red-linebreak{
-  background-color: rgb(149, 6, 6);
+  background-color: rgb(211, 6, 6);
+  /* background-color: rgb(197, 16, 16); */
   width: 90%;
   height: 1.5px;
   margin: 15px auto 22px auto;
