--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 html{
 
-    /* background-color: #fff; */
-    background-color: rgb(24, 26, 27);
+    background-color: #fff;
+    /* background-color: rgb(24, 26, 27); */
     height: 100%;
     padding: 0px;
     margin: 0px;
@@ -43,8 +43,8 @@ html, body, p, h1, h2, h3, h4, h5{
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   left: 0;
-  background-color: #28052f;
-  /* background-color: rgb(40, 5, 47); */
+  /* background-color: #28052f; */
+  background-color: rgb(40, 5, 47);
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
 }
@@ -67,8 +67,8 @@ html, body, p, h1, h2, h3, h4, h5{
 }
 
 .name{
-    background-color: rgb(149, 6, 6);
-    /* background-color: rgb(211, 16, 16); */
+    /* background-color: rgb(149, 6, 6); */
+    background-color: rgb(211, 16, 16);
     text-align: center;
     padding: 0px;
     margin: 0px;
